Fix mobile nav overflow on mobile

--- a/static/css/less_css/less/tba_bootstrap_overrides/tba_navbar_overrides.less
+++ b/static/css/less_css/less/tba_bootstrap_overrides/tba_navbar_overrides.less
@@ -5,12 +5,6 @@
     padding: ((@navbarHeight - @elementHeight) / 2) 20px ((@navbarHeight - @elementHeight) / 2 + 2);
     font-weight: 600;
   }
-  // Phones only
-  @media (max-width: 767px) {
-    .brand {
-      font-size: 16px;
-    }
-  }
 }
 
 .navbar-search {
